# user-rs

./: Cargo.toml  README.md
migrations/: 20240118083429_create_table.sql
sql_scripts/users/: insert_user.sql
src/: main.rs
src/errors/: errors.rs
src/handlers/: mod.rs  ping.rs  response.rs  users.rs
src/middlewares/: authorization.rs
src/models/: user.rs
src/repos/: mod.rs  ping.rs  repository.rs  table.rs  user.rs
