[package]
name = "user-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = { version = "0.7.4", features = ["http2", "macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
#tower = "0.4.13"
serde = { version = "1.0.195", features = ["derive", "std"] }
actix-web = "4.4.1"
derive_more = "0.99.17"
serde_json = "1.0.111"
env_logger = "0.10.1"
log = "0.4.20"
sqlx = { version = "0.7.3",features = ["runtime-async-std", "postgres", "json"] }
